Make appropriate seperations of concerns by removing logic in the app question service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>
   {{title}}
 </h1>
-{{questions | json}}
-<app-ng-json-form [questions]="questions"></app-ng-json-form>
+
+<app-ng-json-form [config]="config"></app-ng-json-form>
